lib/src/model2vec_bindings.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for model2vec-rs.
class Model2VecBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Model2VecBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Model2VecBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int init_embedder(
    ffi.Pointer<ffi.Char> model_path,
  ) {
    return _init_embedder(
      model_path,
    );
  }

  late final _init_embedderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'init_embedder',
      );
  late final _init_embedder = _init_embedderPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int init_embedder_advanced(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<ffi.Char> hf_token,
    ffi.Pointer<ffi.Char> cache_dir,
    int normalize,
    ffi.Pointer<ffi.Char> subfolder,
  ) {
    return _init_embedder_advanced(
      model_path,
      hf_token,
      cache_dir,
      normalize,
      subfolder,
    );
  }

  late final _init_embedder_advancedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('init_embedder_advanced');
  late final _init_embedder_advanced = _init_embedder_advancedPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int init_embedder_from_bytes(
    ffi.Pointer<ffi.UnsignedChar> tokenizer_ptr,
    int tokenizer_len,
    ffi.Pointer<ffi.UnsignedChar> model_ptr,
    int model_len,
    ffi.Pointer<ffi.UnsignedChar> config_ptr,
    int config_len,
  ) {
    return _init_embedder_from_bytes(
      tokenizer_ptr,
      tokenizer_len,
      model_ptr,
      model_len,
      config_ptr,
      config_len,
    );
  }

  late final _init_embedder_from_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.UnsignedChar>,
            ffi.UnsignedLong,
            ffi.Pointer<ffi.UnsignedChar>,
            ffi.UnsignedLong,
            ffi.Pointer<ffi.UnsignedChar>,
            ffi.UnsignedLong,
          )
        >
      >('init_embedder_from_bytes');
  late final _init_embedder_from_bytes = _init_embedder_from_bytesPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
        )
      >();

  int get_embedding_dimension() {
    return _get_embedding_dimension();
  }

  late final _get_embedding_dimensionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'get_embedding_dimension',
      );
  late final _get_embedding_dimension = _get_embedding_dimensionPtr
      .asFunction<int Function()>();

  int get_vocabulary_size() {
    return _get_vocabulary_size();
  }

  late final _get_vocabulary_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('get_vocabulary_size');
  late final _get_vocabulary_size = _get_vocabulary_sizePtr
      .asFunction<int Function()>();

  int is_normalized() {
    return _is_normalized();
  }

  late final _is_normalizedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('is_normalized');
  late final _is_normalized = _is_normalizedPtr.asFunction<int Function()>();

  int get_median_token_length() {
    return _get_median_token_length();
  }

  late final _get_median_token_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'get_median_token_length',
      );
  late final _get_median_token_length = _get_median_token_lengthPtr
      .asFunction<int Function()>();

  ffi.Pointer<ffi.Char> tokenize(
    ffi.Pointer<ffi.Char> text,
  ) {
    return _tokenize(
      text,
    );
  }

  late final _tokenizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('tokenize');
  late final _tokenize = _tokenizePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  int generate_embedding(
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Float> out_vector,
    int max_len,
  ) {
    return _generate_embedding(
      text,
      out_vector,
      max_len,
    );
  }

  late final _generate_embeddingPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Float>,
            ffi.UnsignedLong,
          )
        >
      >('generate_embedding');
  late final _generate_embedding = _generate_embeddingPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Float>, int)
      >();

  int generate_batch_embeddings(
    ffi.Pointer<ffi.Pointer<ffi.Char>> texts_ptr,
    int count,
    ffi.Pointer<ffi.Float> out_vectors,
  ) {
    return _generate_batch_embeddings(
      texts_ptr,
      count,
      out_vectors,
    );
  }

  late final _generate_batch_embeddingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.UnsignedLong,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('generate_batch_embeddings');
  late final _generate_batch_embeddings = _generate_batch_embeddingsPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          int,
          ffi.Pointer<ffi.Float>,
        )
      >();

  int generate_batch_embeddings_advanced(
    ffi.Pointer<ffi.Pointer<ffi.Char>> texts_ptr,
    int count,
    ffi.Pointer<ffi.Float> out_vectors,
    int max_length,
    int batch_size,
  ) {
    return _generate_batch_embeddings_advanced(
      texts_ptr,
      count,
      out_vectors,
      max_length,
      batch_size,
    );
  }

  late final _generate_batch_embeddings_advancedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.UnsignedLong,
            ffi.Pointer<ffi.Float>,
            ffi.UnsignedLong,
            ffi.UnsignedLong,
          )
        >
      >('generate_batch_embeddings_advanced');
  late final _generate_batch_embeddings_advanced =
      _generate_batch_embeddings_advancedPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              int,
              ffi.Pointer<ffi.Float>,
              int,
              int,
            )
          >();

  void free_string(
    ffi.Pointer<ffi.Char> s,
  ) {
    return _free_string(
      s,
    );
  }

  late final _free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'free_string',
      );
  late final _free_string = _free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}
